# django-template

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: asgi.py  wsgi.py
config/django/: base.py  production.py
config/settings/: celery.py
